# zebar

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yaml  publish-crate.yaml  release.yaml
crates/menu-util/: Cargo.toml  README.md
crates/menu-util/src/: lib.rs  menu.rs
crates/shell-util/: Cargo.toml
crates/shell-util/src/: encoding.rs  error.rs  shell.rs  stdout_reader.rs
crates/systray-util/: Cargo.toml
crates/systray-util/src/: error.rs  systray.rs  tray_spy.rs  util.rs
crates/window-util/: Cargo.toml  README.md
crates/window-util/src/: lib.rs  window.rs
examples/macos/: README.md  index.html  macos.zebar.json  package-lock.json  package.json  tsconfig.json
examples/macos/assets/: index-B0eDva1i.css  index-C40G3V6n.js
examples/macos/icons/: Finder.ico:Zone.Identifier  airdrop-icon.png:Zone.Identifier
examples/macos/icons/Windhawk Resources/: shell32.dll:Zone.Identifier
examples/macos/src/: actions.ts  countdownOptions.ts  dropdownOptions.ts  index.css  index.tsx  updates.ts
examples/macos/src/applications/: FileExplorer.ts  MozillaFirefox.ts  Steam.ts  SublimeText.ts  Terminal.ts  VisualStudioCode.ts  _FileExplorer.ts
examples/macos/theme/: macOS - Light.theme
examples/macos/theme/macOS/: macOS - Light.msstyles
examples_src/macos/: README.md  index.html  macos.zebar.json  package.json  tsconfig.json  vite.config.js
examples_src/macos/src/: actions.ts  index.css  index.tsx  updates.ts
examples_src/macos/src/applications/: FileExplorer.ts  MozillaFirefox.ts  Steam.ts  SublimeText.ts  Terminal.ts  VisualStudioCode.ts  Windows.ts
