[package]
name = "menu-util"
version = "0.0.0"
authors = ["Kris Henriksen", "Glzr Software Pte. Ltd."]
description = "A library for Windows 10 and 11 for creating dropdown menus."
license = "MIT"
repository = "https://github.com/krishenriksen/zebar"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
anyhow = "1.0.98"
tauri = "2.5.1"
serde_json.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
