[package]
name = "window-util"
version = "0.0.0"
authors = ["Kris Henriksen", "Glzr Software Pte. Ltd."]
description = "A library for interacting with Windows windows on Windows 10 and 11."
license = "MIT"
repository = "https://github.com/krishenriksen/zebar"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = "1.0.98"
lazy_static = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = { workspace = true }
windows = { workspace = true }
